# epic-iron-jarvis

./: .env.example  .gitignore  AGENTS.md  AUDIT.md  CLAUDE.md  CONTRIBUTORS.md  DEPLOY.md  Dockerfile.dashboard  NOTICE  README.md  RESULT.md  SEAMLESS-AUDIT.md  SECURITY.md  WIRING-AUDIT.md  pyproject.toml  railway.toml
.github/workflows/: release.yml  tests.yml
assets/audio/: README.md  play.html
dashboard/: .npmrc  STANDALONE.md  next.config.mjs  package-lock.json  package.json  pnpm-lock.yaml
dashboard/app/: layout.tsx  manifest.ts  page.tsx
dashboard/app/agents/: page.tsx
dashboard/app/autonomy/: page.tsx
dashboard/app/channels/: page.tsx
dashboard/app/chat/: page.tsx
dashboard/components/: AppFooter.tsx  CommandPalette.tsx  DaemonBanner.tsx  EventStream.tsx  FilePickerModal.tsx  LegalDocument.tsx  MainContent.tsx  MarkdownLegalPage.tsx  ModelSwitcher.tsx  MoodOrb.tsx  NewSessionForm.tsx  NotificationBell.tsx  OnboardingWelcome.tsx  SessionFeedback.tsx  Sidebar.tsx  VoiceInput.tsx  ui.tsx
dashboard/lib/: api.ts  company.ts  daemon.tsx  format.ts  types.ts  useDictation.ts  useTTS.ts
dashboard/scripts/: shot-features.mjs  shot-new.mjs  shot-terminals.mjs
desktop/: README.md  build-installer.ps1  loading.html  main.js  package-lock.json  package.json  pnpm-lock.yaml  preload.js  windowState.js
desktop/assets/: README.md
docs/: PLAN.md  README.md  REFLEX.md  TASKS.md  TELEGRAM.md
legal/: ACCEPTABLE-USE.md  COOKIES.md  COPYRIGHT.md  PRIVACY.md  SECURITY.md  TERMS.md
packaging/: README.md  build_daemon.ps1  hidden_imports.txt  ironjarvis.spec  ironjarvis_entry.py
scripts/: brand_telegram_profile.py  configure_telegram.py  load_env_to_vault.py  refresh_telegram_bot.ps1  start-epic-bot.ps1
src/iron_jarvis/: __init__.py  brand.py  maintenance.py  platform.py
tests/: test_billing_ledger.py  test_chat_armed_tools_perm.py  test_chat_skill_tools.py  test_comm_inbound.py  test_connections.py  test_connectors.py  test_creative.py  test_creative_studio.py  test_daemon.py  test_daily_driver_fixes.py  test_documents.py  test_filesearch.py  test_fix_adapters_v2.py  test_fix_core.py  test_fix_cu_approval.py  test_fix_cu_fields.py  test_fix_custom_tools.py  test_fix_endpoints.py  test_fix_mcp.py  test_fix_oauth.py  test_fix_ops.py  test_fix_sandbox.py  test_fix_security.py  test_fix_sessions.py  test_fix_terminals.py  test_fix_updates.py  test_fix_webhooks.py  test_fix_websearch.py  test_frontier_events.py  test_fsbrowser.py  test_hide_mock.py  test_learning.py  test_mcp_execution.py  test_multiagent.py  test_new_adapters.py  test_onboarding.py  test_packaging_fixes.py  test_pixio_tools.py  test_project_knowledge.py  test_project_knowledge_view.py  (+17 more)
tests/fixtures/: echo_mcp_server.py
(+152 files in other folders)
