[project]
name = "iron-jarvis"
version = "1.32.0"
description = "Iron Jarvis - a local-first AI operating system: a multi-agent orchestrator with tools, memory, workflows, a sandbox, git-native review, and a Next.js control center."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "starlette>=0.40", # imported directly in daemon/auth.py (security middleware)
    "uvicorn[standard]>=0.30",
    "pydantic>=2.7",
    "sqlmodel>=0.0.21",
    "sqlalchemy>=2.0", # imported directly in core/db.py + ~29 stores (not only via sqlmodel)
    "typer>=0.12",
    "httpx>=0.27",
    "anthropic>=0.40",
    "tomli-w>=1.0",
    "cryptography>=43",
    "rich>=13",
    "psutil>=7.2.2",
    "numpy>=2.5.0",
    "apscheduler>=3.11.2",
    "pyyaml>=6.0.3",
    "docker>=7.1.0",
    "pypdf>=6.14.2",
    "python-docx>=1.2.0",
    "openpyxl>=3.1.5",
    "fpdf2>=2.8.7",
    "python-pptx>=1.0.2",
    "pillow>=11", # imported directly in documents/readers.py (image metadata)
    "playwright>=1.60.0",
    "pywinpty>=3.0.5 ; sys_platform == 'win32'",
    "paramiko>=3.4", # SSH/SFTP for the remote long-term-memory source (§21)
    "markitdown[pdf]>=0.1.6",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
    "pyinstaller>=6.21",
]

[project.scripts]
ironjarvis = "iron_jarvis.daemon.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/iron_jarvis"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
